--- a/index.css
+++ b/index.css
@@ -37,9 +37,15 @@
 .nav-link:hover{
     color: orange;
 }
+.nav-link{
+    padding: 14px;
+}
+[tabindex]:focus { background-color: white;}
 
 .dropdown-menu{
     width: 320px;
+    margin-left: -15px;
+    margin-top: auto;
 }
 
 .vr{
@@ -72,10 +78,111 @@
     transition: 0.4s ease-in;
 }
 .dropdown-item:hover svg{
-    transform: translateX(15%);
+    transform: translateX(25%);
 
 }
 .dropdown-item:hover{
     box-shadow: none;
     text-decoration: none;
+}
+
+.local-conditions-info{
+    display: flex;
+
+}
+.conditions{
+    padding: 14px;
+}
+.lang-a{
+    padding: 14px;
+    text-decoration: none;
+    color: black;
+}
+
+.src-but{
+    background-color: midnightblue;
+    /*padding: 12px 12px;*/
+}
+
+.nav-src{
+    background-color: #1c2b39;
+    padding: 14px;
+}
+
+
+/* Стили для всплывающей строки поиска */
+.search-dropdown {
+    width: 100%;
+    height: 50px;
+    position: relative;
+    display: none; /* Скрываем по умолчанию */
+    background-color: #1c2b39;
+    text-align: center;
+}
+
+.search-input {
+    width: 1200px;
+    padding: 8px;
+    border: 0;
+    outline: 0;
+    height: 30px;
+    font-size: medium;
+    line-height: 1.25;
+    color: white;
+    box-shadow: inset 0 -1px 0 #3a5167;
+    margin-right: 20px;
+    border-bottom: .1vh #ccc;
+    background: 0 0;
+}
+
+::placeholder { /* Most modern browsers support this now. */
+    color:    white;
+    font-size: medium;
+}
+
+.search-submit {
+    margin-top: 12px;
+    margin-bottom: 8px;
+    width: 100px;
+    border-radius: 15px;
+    /*background-color: #eb3d0c;*/
+    background: linear-gradient(90deg,#eb3d0c,#ee6d05 98.96%);
+    box-shadow: 0 0 20px rgba(0,0,0,.1);
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+/*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*/
+
+/*.search-submit:hover{*/
+/*    */
+/*}*/
+
+/*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*//*Todo*/
+.search-close{
+    /*padding: 8px;*/
+    margin-top: 12px;
+    width: 100px;
+    margin-bottom: 8px;
+    border-radius: 15px;
+    background-color: #6a7272;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+/* Отображаем всплывающую строку поиска при нажатии на кнопку поиска */
+#search-button:focus + #search-dropdown,
+#search-dropdown:focus-within {
+    display: block;
+}
+#navbarSupportedContent {
+    display: block;
+}
+
+#search-dropdown {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
