--- a/index.css
+++ b/index.css
@@ -606,3 +606,15 @@ body{
     width: 100%;
     height: 120px;
 }
+
+.feedbackBtn{
+    display: inline-flex;
+    background: #fff;
+    color: #1c2b39;
+    align-items: flex-end;
+    box-shadow: 0 0 40px rgba(0,0,0,.2);
+    font-size: .77778rem;
+    line-height: 1.42857;
+    padding: 10px 30px;
+    border-radius: 30px;
+}
